--- a/index.html
+++ b/index.html
@@ -1,10 +1,86 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Котики</title>
 </head>
-<body>
-<p>Lol dude</p>
-</body>
+    <body>
+        <header>
+            <h1>Котики</h1>
+                <a>Много ли вы знаете, что из себя представляют <strong>котики</strong>?</a>
+            <article>
+                <figure>
+                    <img src="katq.jpg" height="210" width="350" alt="CatQuestion"/>
+                        <figcaption>Это он, это котик.</figcaption>
+                    <img src="Seaq.jpg" height="230" width="350" alt="CatSea"/>
+                        <figcaption>И это котик, только морской.</figcaption>
+                </figure>
+            </article>
+        </header>
+
+         <main>
+             <article>
+                 <section>
+                     <p><b>Коты</b> - это млекопитающее <i>семейства кошачьих</i> на четырёх лапах,<br>
+                    с одним хвостом и множеством усовю.<br>
+                         Имеет шерсть и хвост, окрас которых может быть <strong>разным.</strong><br>
+                    Извращённые селекционерские идеи людишек<br>
+                    породили и разновидности без шерсти и/или хвостов,<br>
+                         которые по странному недоразумению тоже считаются <b>котами</b> и <b>кошками</b>.</p>
+                     <figure>
+                         <img src="bezH.jpg" height="235" width="350"/>
+                         <img src="lisik.jpg" height="235" width="350"/>
+                          <figcaption>Это они</figcaption>
+                        </figure>
+                    <p>Но есть ли причины их не любить? Давайте поглядим</p>
+                     <h2>Также ты можешь заполнить <i>Анкету Кошатника</i> по этому <link>линку</h2>
+                 </section>
+
+                 <section>
+                     <p>Из плюсов я бы выделил</p>
+                         <ul>
+                             <li>Мягкий (Не все)</li>
+                             <li>Милый (о5 не все)</li>
+                             <li>Все</li>
+                         </ul>
+                     <p>Из минусов</p>
+                         <ul>
+                                <li>Бьет стаканы</li>
+                                <li>Шредингер</li>
+                                <li>Уходит когда ты его хочешь потискать</li>
+                         </ul>
+                        <p>Также коты имеют уникальную способность - издавать приятные<br>
+                        звуки на частоте от 21,98 Гц до 23,24 Гц</p>
+                            <audio src="Purr.mp3" controls="controls"></audio>
+                        <p>Возможно это какой-то шифр.</p>
+                 </section>
+
+                 <aside>
+                     <h3>Подведем Итоги</h3>
+                     <p>Можно сравнить вот так внезапно котов с собаками</p>
+                        <table width="70%" cellspacing="0" border="1">
+                            <caption>Внезапная таблица Собак и Котов</caption>
+                                <tr>
+                                    <td></td><th>Активность</th><th>Чистолюбие</th><th>Милость</th><th>Преданность</th><th>Послушность</th>
+                                </tr>
+                                <tr>
+                                    <th>Кошки</th><td>Ленивость*</td><td>Да</td><td>Да</td><td>Ха-ха</td><td>У-ха-ха</td>
+                                </tr>
+                                <tr>
+                                    <th>Собаки</th><td>Да</td><td>Нет</td><td>Да</td><td>Да</td><td>Да</td>
+                                </tr>
+                                <tr>
+                                    <th>Итоги</th><td colspan="5">Сами делайте</td>
+                                </tr>
+                        </table>
+                 </aside>
+             </article>
+         </main>
+
+        <footer>
+            <p>Вы не подумайте, я не призываю вас <b>НЕ ЛЮБИТЬ</b> кошек<br>
+            Ведь просто посмотрите на это видео</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/YRNIndNHloU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </footer>
+    </body>
 </html>
