--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                     породили и разновидности без шерсти и/или хвостов,<br>
                          которые по странному недоразумению тоже считаются <b>котами</b> и <b>кошками</b>.</p>
                      <figure>
-                         <img src="bezH.jpg" height="235" width="350"/>
-                         <img src="lisik.jpg" height="235" width="350"/>
+                         <img src="bezH.jpg" height="235" width="350" alt="beznogkot"/>
+                         <img src="lisik.jpg" height="235" width="350" alt="lisiyKot"/>
                           <figcaption>Это они</figcaption>
                         </figure>
                     <p>Но есть ли причины их не любить? Давайте поглядим</p>
-                     <h2>Также ты можешь заполнить <i>Анкету Кошатника</i> по этому <link>линку</h2>
+                     <h2>Также ты можешь заполнить <i>Анкету Кошатника</i> по <a href="test.html">этому линку</a></h2>
                  </section>
 
                  <section>
