--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              <article>
                  <section>
                      <p><b>Коты</b> - это млекопитающее <i>семейства кошачьих</i> на четырёх лапах,<br>
-                    с одним хвостом и множеством усовю.<br>
+                    с одним хвостом и множеством усов.<br>
                          Имеет шерсть и хвост, окрас которых может быть <strong>разным.</strong><br>
                     Извращённые селекционерские идеи людишек<br>
                     породили и разновидности без шерсти и/или хвостов,<br>
