--- a/test.html
+++ b/test.html
@@ -29,7 +29,7 @@
                     <br>
                 <label><input type="radio" name="Личность" value="Плохая">Нет</label>
                     <br>
-                <label>Если вы выбрал "Нет" в прошлом пункте - введи номер паспорта чтоб за тобой выехали:
+                <label>Если ты выбрал "Нет" в прошлом пункте - введи номер паспорта чтоб за тобой выехали:
                     <br>
                         <input type="text" name="Паспорт" placeholder="AB123456" required pattern="[A-Z]{2}[\d]{6}" title="AB123456">
                 </label>
