--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <title>Котики</title>
 </head>
     <body>
+
         <header>
             <h1>Котики</h1>
+            <section>
                 <a>Много ли вы знаете, что из себя представляют <strong>котики</strong>?</a>
-            <article>
+
                 <figure>
                     <img src="katq.jpg" height="210" width="350" alt="CatQuestion"/>
                         <figcaption>Это он, это котик.</figcaption>
+                </figure>
+
+                <figure>
                     <img src="Seaq.jpg" height="230" width="350" alt="CatSea"/>
                         <figcaption>И это котик, только морской.</figcaption>
                 </figure>
-            </article>
+            </section>
         </header>
 
          <main>
@@ -33,7 +38,7 @@
                           <figcaption>Это они</figcaption>
                         </figure>
                     <p>Но есть ли причины их не любить? Давайте поглядим</p>
-                     <h2>Также ты можешь заполнить <i>Анкету Кошатника</i> по <a href="test.html">этому линку</a></h2>
+                     <p><b>Также ты можешь заполнить <i>Анкету Кошатника</i> по <a href="test.html">этому линку</a></b></p>
                  </section>
 
                  <section>
@@ -54,9 +59,8 @@
                             <audio src="Purr.mp3" controls="controls"></audio>
                         <p>Возможно это какой-то шифр.</p>
                  </section>
-
+                    <h3>Подведем Итоги</h3>
                  <aside>
-                     <h3>Подведем Итоги</h3>
                      <p>Можно сравнить вот так внезапно котов с собаками</p>
                         <table width="70%" cellspacing="0" border="1">
                             <caption>Внезапная таблица Собак и Котов</caption>
