--- a/test.html
+++ b/test.html
@@ -34,7 +34,7 @@
                         <input type="text" name="Паспорт" placeholder="AB123456" required pattern="[A-Z]{2}[\d]{6}" title="AB123456">
                 </label>
                     <br>
-                <label for>Домофон в подьезде твоем есть?</label>
+                <label>Домофон в подьезде твоем есть?</label>
                     <br>
                 <label><input type="radio" name="Подьезд" value="Заперто" checked>Есть</label>
                     <br>
